# system-integration

./: .gitignore  README.md
01._Assignments/01._Into_Data_Formats/: README.md
01._Assignments/02._Data/: docker-compose.yaml
01._Assignments/03._Server_To_Server/: README.md
01._Assignments/06._Client_and_Server_Client_to_Client/: README.md
01._Assignments/08._Documentation_Client-to-client/: 08b._Generate_Code_Documentation_For_DLS.md  08d._Generate_Code_Documentation_For_DLS.md  README.md
01._Assignments/11._Cors_Media_I/: README.md
01._Assignments/13._Graphql/: ImplementGraphQl.md
02._Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml  paymentIFrame.html
03._Modules/html_classic/: index.html  index.js
03._Modules/html_modules/: index.html  index.js  myModule.js
03._Modules/node_commonjs/: myModule.js
03._Modules/node_esmodules/: index.js  myModule.js
03._Modules/python_main/: library_importer.py  potential_library.py
03._Modules/python_modules/: encode_decode.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Environments/: main.py
05._Python_Virtual_Environments/02._pipenv/: README.md
05._Python_Virtual_Environments/03._poetry/: pyproject.toml
06._Simple_Servers/02._Python/: main.py
08._Server-Server/01._node/: app.js  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
09._Environment_Variables/01._Node/: index.js  package-lock.json  package.json
09._Environment_Variables/02._Python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02.python/: main.py
14._Websocket/02._Python_Plain/: client.py  pyproject.toml  server.py
15._OpenAPI/02._Python/: main.py  (+1 more)
17._Database_Migrations/: README.md  docker-compose.yml
18._CORS/: index.html
18._CORS/02._Python/: main.py  pyproject.toml
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package.json
23._Embedded_Youtube/: index.html
24._Git_Hooks/: main.js
27._WebScraping_Web_Crawling/03._python_scrappy_basic/: pyproject.toml
27._WebScraping_Web_Crawling/03._python_scrappy_basic/wikicrawler/wikicrawler/spiders/: wikipedia.py
(+198 files in other folders)
