[project]
name = "02-python"
version = "0.1.0"
description = ""
authors = [
    {name = "realkoder",email = "alexanderbtcc@gmail.com"}
]

requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.13"
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.1.8"
fastapi = "0.115.12"
h11 = "0.14.0"
idna = "3.10"
pydantic = "2.11.3"
pydantic_core = "2.33.1"
sniffio = "1.3.1"
starlette = "0.46.1"
typing-inspection = "0.4.0"
typing_extensions = "4.13.1"
uvicorn = "0.34.0"

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
