[project]
name = "03-python-scrappy-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "realkoder",email = "alexanderbtcc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "03"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
